--- a/jenkins/10-serviceaccounts.yaml
+++ b/jenkins/10-serviceaccounts.yaml
@@ -3,15 +3,15 @@ kind: ServiceAccount
 metadata:
   name: jenkins
   namespace: jenkins
+
 ---
-kind: Role
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: jenkins
-  namespace: jenkins
 rules:
 - apiGroups: [""]
-  resources: ["pods"]
+  resources: ["*"]
   verbs: ["create","delete","get","list","patch","update","watch"]
 - apiGroups: [""]
   resources: ["pods/exec"]
@@ -25,39 +25,9 @@ rules:
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["get"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: jenkins
-  namespace: jenkins
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: jenkins
-subjects:
-- kind: ServiceAccount
-  name: jenkins
-
-
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: jenkins
-rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["list"]
-- apiGroups: [""]
-  resources: ["namespaces"]
-  verbs: ["list"]
-- apiGroups: ["apps"]
-  resources: ["deployments"]
-  verbs: ["list","patch","get"]
-- apiGroups: ["apps"]
-  resources: ["daemonsets"]
-  verbs: ["list","patch"]
+- apiGroups: ["*"]
+  resources: ["*"]
+  verbs: ["*"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -70,5 +40,5 @@ roleRef:
   name: jenkins
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: jenkins
   namespace: jenkins
