--- a/db/influxdb.yaml
+++ b/db/influxdb.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: influxdb
         image: docker-cache.tinker.haus/library/influxdb:latest
-        imagePullPolicy: Always
+         # imagePullPolicy: Always
         ports:
         - containerPort: 8086
           protocol: TCP
@@ -30,8 +30,9 @@ spec:
       volumes:
         - name: influxdb2
           hostPath:
-            path: /var/srv/db/influxdb2
+            path: /srv/db/influxdb2
             type: DirectoryOrCreate
+
 
 ---
 apiVersion: v1
@@ -51,21 +52,6 @@ spec:
 
 ---
 apiVersion: traefik.io/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: influxdb
-  namespace: db
-spec:
-  entryPoints:
-    - influxdb
-  routes:
-  - match: HostSNI(`*`)
-    services:
-    - name: influxdb
-      port: 8086
-
----
-apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: influxdb
@@ -74,6 +60,7 @@ spec:
   entryPoints:
     - web
     - websecure
+    - influxdb
   routes:
     - match: Host(`influxdb.tinker.haus`)
       kind: Rule
