--- a/games/valheim-chilled.yaml
+++ b/games/valheim-chilled.yaml
@@ -21,9 +21,9 @@ spec:
       containers:
       - name: valheim-chilled
         image: docker-cache.tinker.haus/lloesche/valheim-server
-        imagePullPolicy: Always
+         # imagePullPolicy: Always
         ports:
-        - name: status
+        - name: statusport
           containerPort: 2458
           protocol: TCP
         - name: gameport
@@ -34,7 +34,7 @@ spec:
           protocol: UDP
         env:
         - name: SERVER_NAME
-          value: "ChilledPeeps"
+          value: "Chilled Peeps"
         - name: SERVER_PORT
           value: "2456"
         - name: WORLD_NAME
@@ -42,7 +42,7 @@ spec:
         - name: SERVER_PASS
           value: "%%VALHEIM_PASS%%"
         - name: SERVER_PUBLIC
-          value: "true"
+          value: "false"
         - name: TZ
           value: "Europe/Bucharest"
         - name: BACKUPS_MAX_AGE
@@ -59,9 +59,9 @@ spec:
       volumes:
         - name: config
           hostPath:
-            path: /var/srv/games/valheim-chilled/config
+            path: /srv/games/valheim-chilled/config
             type: DirectoryOrCreate
         - name: server
           hostPath:
-            path: /var/srv/games/valheim-chilled/server
+            path: /srv/games/valheim-chilled/server
             type: DirectoryOrCreate
