--- a/games/valheim-hh.yaml
+++ b/games/valheim-hh.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: valheim-hh
         image: docker-cache.tinker.haus/lloesche/valheim-server
-        imagePullPolicy: Always
+         # imagePullPolicy: Always
         ports:
         - name: status
           containerPort: 12458
@@ -40,7 +40,7 @@ spec:
         - name: WORLD_NAME
           value: "OmicronPersei8"
         - name: SERVER_PASS
-          value: ""
+          value: "%%VALHEIM_PASS%%"
         - name: SERVER_PUBLIC
           value: "false"
         - name: TZ
@@ -59,9 +59,9 @@ spec:
       volumes:
         - name: config
           hostPath:
-            path: /var/srv/games/valheim-hh/config
+            path: /srv/games/valheim-hh/config
             type: DirectoryOrCreate
         - name: server
           hostPath:
-            path: /var/srv/games/valheim-hh/server
+            path: /srv/games/valheim-hh/server
             type: DirectoryOrCreate
