--- a/traefik/traefik-helm.yaml
+++ b/traefik/traefik-helm.yaml
@@ -5,9 +5,6 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
-    globalArguments:
-    - --global.checknewversion=false
-    - --global.sendanonymoususage=false
     ports:
       e-web:
         port: 10080
@@ -45,14 +42,13 @@ spec:
         exposePort: 5432
     logs:
       general:
-        level: INFO
-    certificatesResolvers:
+        level: DEBUG
+    certResolvers:
       letsencrypt:
-        acme:
-          dnsChallenge:
-            provider: cloudflare
-          storage: /datalocal/certs/acme.json
-          email: "alex.sever.h@gmail.com"
+        dnsChallenge:
+          provider: cloudflare
+        storage: /datalocal/certs/acme.json
+        email: "alex.sever.h@gmail.com"
     providers:
       kubernetesCRD:
         allowCrossNamespace: true
@@ -75,11 +71,41 @@ spec:
     additionalVolumeMounts:
       - name: datalocal
         mountPath: "/datalocal"
-    ingressRoute:
-      dashboard:
-        enabled: true
-        # Custom match rule with host domain
-        matchRule: Host(`traefik.tinker.haus`)
-        entryPoints:
-          - "web"
-          - "websecure"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: traefik-dashboard
+  namespace: kube-system
+  labels:
+    app.kubernetes.io/instance: traefik
+    app.kubernetes.io/name: traefik-dashboard
+spec:
+  type: ClusterIP
+  ports:
+  - name: traefik
+    port: 9000
+    targetPort: traefik
+    protocol: TCP
+  selector:
+    app.kubernetes.io/instance: traefik-kube-system
+    app.kubernetes.io/name: traefik
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: traefik-ingress2
+  namespace: kube-system
+spec:
+  entryPoints:
+    - web
+    - websecure
+  routes:
+    - match: Host(`traefik.tinker.haus`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      kind: Rule
+      services:
+      - name: traefik-dashboard
+        port: 9000
+
