--- a/immich/helmchart.yaml
+++ b/immich/helmchart.yaml
@@ -126,3 +126,30 @@ spec:
           port: 2283
       middlewares:
         - name: crowdsec-bouncer@kubernetescrd
+        - name: kube-system-security-headers@kubernetescrd
+        - name: immich-strict-transport-security@kubernetescrd
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: strict-transport-security
+  namespace: immich
+spec:
+  headers:
+    # Strict-Transport-Security
+    stsPreload: true
+    stsSeconds: 15552000
+    customFrameOptionsValue: SAMEORIGIN
+    customResponseHeaders:
+      # Content-Security-Policy
+      #Content-Security-Policy: "default-src 'self'; script-src 'self' https://trusted.cdn.com; object-src 'none';"
+      #Content-Security-Policy: "default-src 'self' http: https: data: blob: 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval';"
+      # X-Content-Type-Options
+      X-Content-Type-Options: "nosniff"
+      # Referrer-Policy
+      Referrer-Policy: "no-referrer-when-downgrade"
+      # Permissions-Policy
+      Permissions-Policy: "geolocation=(), microphone=(), camera=(), fullscreen=(self)"
+      # The anti-clickjacking X-Frame-Options header
+      X-Frame-Options: "SAMEORIGIN"
