--- a/jenkins/50-jenkins.yaml
+++ b/jenkins/50-jenkins.yaml
@@ -56,7 +56,7 @@ metadata:
 spec:
   volumeName: jenkins-home
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   storageClassName: my-local-storage
   resources:
     requests:
@@ -73,11 +73,50 @@ spec:
     storage: 100Gi
   volumeMode: Filesystem
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   storageClassName: my-local-storage
   local:
     path: /var/srv/jenkins/home
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - shallowthought
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: jenkins-workspace-claim
+  namespace: jenkins
+spec:
+  volumeName: jenkins-workspace
+  accessModes:
+  - ReadWriteMany
+  storageClassName: my-local-storage
+  resources:
+    requests:
+      storage: 500Gi
+        
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: jenkins-workspace
+  namespace: jenkins
+spec:
+  capacity:
+    storage: 500Gi
+  volumeMode: Filesystem
+  accessModes:
+  - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: my-local-storage
+  local:
+    path: /var/srv/jenkins/workspace
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -107,7 +146,7 @@ spec:
   selector:
     app: jenkins
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: jenkins
@@ -127,14 +166,13 @@ spec:
         - name: jenkins-strict-transport-security@kubernetescrd
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: strict-transport-security
   namespace: jenkins
 spec:
   headers:
-    sslRedirect: true
     stsPreload: true
     stsSeconds: 15552000
     customFrameOptionsValue: SAMEORIGIN
