[Jenkins] Fix service account rules

--- a/jenkins/10-serviceaccounts.yaml
+++ b/jenkins/10-serviceaccounts.yaml
@@ -54,7 +54,7 @@ rules:
   verbs: ["list"]
 - apiGroups: ["apps"]
   resources: ["deployments"]
-  verbs: ["list","patch"]
+  verbs: ["list","patch","get"]
 - apiGroups: ["apps"]
   resources: ["daemonsets"]
   verbs: ["list","patch"]
